<resources>
    <string name="app_name">AnimatedDownloader</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>
    <string name="error_no_selection">An option must be selected</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_channel_id" translatable="false">download_channel</string>
    <string name="notification_channel_name" translatable="true">Download</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="download_glide">Glide - Image Binding Library by BumpTech</string>
    <string name="download_loadApp">LoadApp - Current repository by Udacity</string>
    <string name="download_retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="download_default_message">Message can not be taken</string>

    <string name="detail_file_name">File Name</string>
    <string name="detail_status">Status</string>
    <string name="detail_ok">OK</string>
    <string name="detail_success">Success</string>
    <string name="detail_fail">Fail</string>
</resources>