<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <RadioGroup
        android:id="@+id/download_choice_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.641">

        <RadioButton
            android:id="@+id/radio_glide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/download_glide" />

        <RadioButton
            android:id="@+id/radio_loadapp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/download_loadApp" />

        <RadioButton
            android:id="@+id/radio_retrofit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/download_retrofit" />

    </RadioGroup>

    <com.ozgegn.animateddownloader.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        app:buttonColor="@color/colorPrimary"
        app:buttonProgressColor="@color/colorPrimaryDark"
        app:buttonText="@string/button_name"
        app:buttonLoadingText="@string/button_loading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/download_choice_list"
        app:layout_constraintVertical_bias="0.95"
        app:textColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>